subtask 3.3.5
